[project]
name = "wifi-sentry"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jeepney>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
wst = "wst.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wst"]